<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WidgetWeather</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_ad_main">AdMainActivity</string>
    <string name="temprefix">今天温度：</string>
    <string name="indexprefix">今天穿衣指数:</string>
    <string name="index48prefix">48小时穿衣指数:</string>
    <string name="index_xcprefix">洗车:</string>
    <string name="index_tr">旅游:</string>
    <string name="index_co">舒适指数:</string>
    <string name="index_cl">晨练:</string>
    <string name="index_ls">晾晒:</string>
    <string name="index_ag">过敏:</string>
    <string name="am">早</string>
    <string name="pm">晚</string>

</resources>