<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdMainActivity" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <com.google.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="a151a1c7d4856f6"
            ads:loadAdOnCreate="true"
            ads:testing="false" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="city"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="date" />

        <TextView
            android:id="@+id/todaytem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temprefix"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/weathertop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageweather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="天气"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fengsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/fengsumiaoshu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="风速"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/fengsudengji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="风速等级"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/jianyi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indexprefix"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <TextView
            android:id="@+id/index_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/index48"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index48prefix"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/index48_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/xc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index_xcprefix"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index_tr"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/ls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index_ls"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/co"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index_co"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/ag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index_ag"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/cl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index_cl"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</LinearLayout>